修复编译错误并标准化message-service模块
核心修复:
- 添加UTF-8编码配置解决Windows编译字符编码问题
- 修复MyBatis注解中的Unicode智能引号问题
- 修复TaskResultConverter类引用错误
- 创建MongoDB配置类解决MongoTemplate找不到问题
- 修复RabbitMQ发布确认CorrelationData为null问题

message-service标准化:
- 替换自定义ApiResponse为项目标准BaseResponseAdvice
- 统一使用DynamicResponse返回格式
- 添加标准化DTO响应类
- 简化控制器异常处理逻辑
- 启用MongoDB自动配置

技术改进:
- 添加RabbitMQ消息关联数据追踪
- 优化MyBatis Plus查询注解
- 统一项目编码规范和返回格式